Fixed Search Bar Spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@ body {
     background-color: transparent;
     color: var(--text-color);
     margin-left: 5vw;
+    margin-right: .5rem;
     font-size: 1.5rem;
     border-top: none;
     border-left: none;
